--- a/bank-automat/saldo.ui
+++ b/bank-automat/saldo.ui
@@ -28,8 +28,8 @@
   <widget class="QLabel" name="saldoTeksti">
    <property name="geometry">
     <rect>
-     <x>690</x>
-     <y>420</y>
+     <x>630</x>
+     <y>100</y>
      <width>350</width>
      <height>70</height>
     </rect>
@@ -76,8 +76,8 @@
   <widget class="QLineEdit" name="saldoKentta">
    <property name="geometry">
     <rect>
-     <x>1040</x>
-     <y>420</y>
+     <x>980</x>
+     <y>100</y>
      <width>200</width>
      <height>71</height>
     </rect>
@@ -859,6 +859,36 @@ QPushButton:pressed{
      </item>
     </layout>
    </widget>
+  </widget>
+  <widget class="QTextEdit" name="tapahtumaKentta">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>190</y>
+     <width>791</width>
+     <height>401</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>26</pointsize>
+    </font>
+   </property>
+   <property name="cursor" stdset="0">
+    <cursorShape>OpenHandCursor</cursorShape>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTextEdit{
+	background-color: transparent;
+    border: 3px solid rgb(0,61,0);
+	color: rgb(0, 61, 0);
+}
+</string>
+   </property>
   </widget>
  </widget>
  <resources/>
