--- a/bank-automat/saldo.ui
+++ b/bank-automat/saldo.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1581</width>
-    <height>812</height>
+    <width>1697</width>
+    <height>989</height>
    </rect>
   </property>
   <property name="font">
@@ -28,28 +28,28 @@
   <widget class="QLabel" name="saldoTeksti">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>100</y>
-     <width>350</width>
-     <height>70</height>
+     <x>650</x>
+     <y>270</y>
+     <width>460</width>
+     <height>80</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
-     <width>350</width>
-     <height>70</height>
+     <width>460</width>
+     <height>80</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
-     <width>350</width>
-     <height>70</height>
+     <width>460</width>
+     <height>80</height>
     </size>
    </property>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>24</pointsize>
+     <pointsize>28</pointsize>
     </font>
    </property>
    <property name="layoutDirection">
@@ -76,62 +76,42 @@
   <widget class="QLineEdit" name="saldoKentta">
    <property name="geometry">
     <rect>
-     <x>980</x>
-     <y>100</y>
-     <width>200</width>
-     <height>71</height>
+     <x>1110</x>
+     <y>270</y>
+     <width>240</width>
+     <height>80</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>240</width>
+     <height>80</height>
+    </size>
    </property>
    <property name="maximumSize">
     <size>
-     <width>200</width>
-     <height>230</height>
+     <width>240</width>
+     <height>80</height>
     </size>
    </property>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>20</pointsize>
+     <pointsize>28</pointsize>
     </font>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
     background-color: white;
-    border: 2px solid green;
+    border: 2px solid rgb(0,61,0);
     border-radius: 5px;
 }</string>
    </property>
-  </widget>
-  <widget class="QLabel" name="logo">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>200</width>
-     <height>230</height>
-    </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>200</width>
-     <height>230</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>200</width>
-     <height>230</height>
-    </size>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: transparent;
-border-image: url(:/poorbanklogo.png);
-background: none;
-border: none;
-background-repeat: none;</string>
-   </property>
-   <property name="text">
-    <string/>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="kirjautunutLabel">
@@ -176,6 +156,9 @@ background-repeat: none;</string>
      <family>Ubuntu</family>
      <pointsize>24</pointsize>
     </font>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit{
@@ -863,8 +846,8 @@ QPushButton:pressed{
   <widget class="QTextEdit" name="tapahtumaKentta">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>190</y>
+     <x>600</x>
+     <y>440</y>
      <width>791</width>
      <height>401</height>
     </rect>
@@ -890,6 +873,62 @@ QPushButton:pressed{
 </string>
    </property>
   </widget>
+  <widget class="QPushButton" name="logo_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>200</width>
+     <height>230</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+	border-image: url(:/poorbanklogo.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/poorbanklogopainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>saldoKentta</zorder>
+  <zorder>kirjautunutLabel</zorder>
+  <zorder>kayttajaNimi</zorder>
+  <zorder>widget_3</zorder>
+  <zorder>widget</zorder>
+  <zorder>tapahtumaKentta</zorder>
+  <zorder>saldoTeksti</zorder>
+  <zorder>logo_2</zorder>
  </widget>
  <resources/>
  <connections/>
